# for display continuity sake please use 2 spaces instead of tabs

2013-05-21 mmichaud <michael.michaud@free.fr>
  * second tentative to fix 3613603

2013-05-20 ede
  * bugfix 3613603: NPE thrown by LayerNamePanel
    https://sourceforge.net/tracker/?func=detail&atid=679906&aid=3613603&group_id=118054
  * minor performance enhancement for LayerNameTree selection

2013-05-20 mmichaud <michael.michaud@free.fr>
  * now, changing active InternalFrame will change activeTaskFrame
    if internalFrame is a TaskFrameProxy (see also FR 3613274)

2013-05-19 mmichaud <michael.michaud@free.fr>
  * add optional 'Apply' button in MultiInputDialog, and use it in 
    DeeChangeStylesPlugIn

2013-05-18 mmichaud <michael.michaud@free.fr>
  * add project name (aka task name) in the ViewAttribute frame title.
  * fix bug 3613234 : sorting attributes did not respect comparator contract
  
2013-05-11 ede
  * carefully reordered main menu View
  * zoomPrevious/NextPlugIn have shortcuts Ctrl+Shift+Y/Z now

2013-05-10 ede
  * move 'Combine Layers' to Layer main menu
  * resorted main menus Edit and Layer for better overview

2013-05-10 mmichaud <michael.michaud@free.fr>
  * upgrading Cadplan JumpPrinter to version 1.86 (PLUS version)

2013-04-28 mmichaud <michael.michaud@free.fr>
  * improve usability of SearchAllAttributesPlugIn : make it possible to switch
    between select and add to selection with the shift key and zoom to selected
    features.
  * FR 3610851 : add moveto tool in the attribute panel
  
2013-04-27 mmichaud <michael.michaud@free.fr>
  * try to fix 3611503 in FillPolygonTool

2013-04-25 ede
  oj_windows.bat:
    survive wmic ram detection errors and start regardless with
    safe default

* release 1.6.2 ***************************************************************

2013-04-23 mmichaud <michael.michaud@free.fr>
  * set the appropriate srid to the layer after AddDatastoreLayerPlugin
  
2013-04-21 mmichaud <michael.michaud@free.fr>